; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/commit/extr_commitstagedfile.c_assert_commit_is_head_.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/commit/extr_commitstagedfile.c_assert_commit_is_head_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"Commit is not the HEAD\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32)* @assert_commit_is_head_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_commit_is_head_(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @repo, align 4
  %9 = call i32 @git_revparse_single(i32** %7, i32 %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @git_commit_id(i32* %11)
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @git_commit_id(i32* %13)
  %15 = call i32 @git_oid_equal(i32 %12, i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @clar__assert(i32 %15, i8* %16, i32 %17, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32* null, i32 1)
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @git_commit_free(i32* %19)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32**, i32, i8*) #1

declare dso_local i32 @clar__assert(i32, i8*, i32, i8*, i32*, i32) #1

declare dso_local i32 @git_oid_equal(i32, i32) #1

declare dso_local i32 @git_commit_id(i32*) #1

declare dso_local i32 @git_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
